#178 Fix oauth and oidc class structure